# mprobe

./: Cargo.toml  README.md
src/: app.rs  config.rs  main.rs
src/data/: battery.rs  connection.rs  cpu.rs  disk.rs  memory.rs  mod.rs  network.rs  process.rs  temperature.rs
src/ui/: connections.rs  cpu.rs  disk.rs  header.rs  memory.rs  mod.rs  network.rs  process.rs  system_info.rs  theme.rs
